// Vitest Snapshot v1

exports[`componentMethodsJsDocHandler > adds descriptions 1`] = `
[
  {
    "description": "The foo method.",
    "docblock": "
        The foo method.
        @param test The test
        @returns The number
      ",
    "modifiers": [],
    "name": "foo",
    "params": [
      {
        "description": "The test",
        "name": "test",
        "optional": false,
        "type": null,
      },
    ],
    "returns": {
      "description": "The number",
      "type": null,
    },
  },
]
`;

exports[`componentMethodsJsDocHandler > adds js doc types when no flow types 1`] = `
[
  {
    "description": null,
    "docblock": "
        @param {string} test
        @returns {string}
      ",
    "modifiers": [],
    "name": "foo",
    "params": [
      {
        "description": null,
        "name": "test",
        "optional": false,
        "type": {
          "name": "string",
        },
      },
    ],
    "returns": {
      "description": null,
      "type": {
        "name": "string",
      },
    },
  },
]
`;

exports[`componentMethodsJsDocHandler > keeps flow types over js doc types 1`] = `
[
  {
    "description": null,
    "docblock": "
        @param {string} test
        @returns {string}
      ",
    "modifiers": [],
    "name": "foo",
    "params": [
      {
        "description": null,
        "name": "test",
        "optional": false,
        "type": {
          "name": "number",
        },
      },
    ],
    "returns": {
      "description": null,
      "type": {
        "name": "number",
      },
    },
  },
]
`;
